[package]
name = "valkey-http"
authors = ["Harkrishn Patro"]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
description = "A HTTP interface module for Valkey"
debug = true
debuginfo-level = 2
new-symbol-mangling = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valkey-module = "0.1.1"
serde = "1.0.207"
serde_json = "1.0.124"
rouille = "3.6.2"

[lib]
crate-type = ["cdylib"]
name = "valkey_http"

